# wheel_robot

./: .gitignore  AGENTS.md  README.md  frames.gv  yolov8n.pt
src/: ROS2-V3.5(humble)常用指令.txt
src/FT/FTmotor/: CMakeLists.txt  package.xml
src/FT/FTmotor/include/: INST.h  SCServo.h  SMS_STS.h
src/FT/FTmotor/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/FT/FTmotor/src/: SCS.cpp  SCSerial.cpp  SMSCL.cpp  SMS_STS.cpp
src/FT/ft_driver/: CMakeLists.txt  package.xml
src/FT/ft_driver/config/: params.yaml
src/FT/ft_driver/include/: ftmotor_base_node.h
src/FT/ft_driver/launch/: base_ft.launch.py
src/FT/ft_driver/src/: ftmotor_base_node.cpp  ftpublisher.cpp  subnode_ft.cpp
src/FT/ftmsg/: CMakeLists.txt  package.xml
src/FT/ftmsg/msg/: MotorData.msg
src/FT/keyboard_control/: CMakeLists.txt  package.xml
src/FT/keyboard_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/FT/keyboard_control/src/: keyboard_control.cpp
src/FT/move_ft/: CMakeLists.txt  package.xml
src/FT/move_ft/include/: motorModel.h
src/FT/move_ft/src/: motorModel.cpp
src/qt_ros_test/: CMakeLists.txt  package.xml
src/qt_ros_test/include/qt_ros_test/: main_window.hpp  qnode.hpp
src/qt_ros_test/launch/: keyboard_camera.launch.py
src/qt_ros_test/script/: cartographer.sh  gmapping.sh  killall.sh  nav.sh  slam_toolbox.sh  web.sh
src/qt_ros_test/src/: CCtrlDashBoard.cpp  main_window.cpp  qnode.cpp
src/qt_ros_test/ui/: main_window.ui
src/screen_ctrl/: CMakeLists.txt
src/screen_ctrl/include/: screen_control.h
src/screen_ctrl/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/screen_ctrl/log/: latest_build
src/screen_ctrl/src/: screen_control.cpp  test.py
src/serial_angle_pkg/src/serial_angle_pkg/: CMakeLists.txt  package.xml
src/serial_angle_pkg/src/serial_angle_pkg/src/: serial_angle_node.cpp
src/sound_track/: package.xml  setup.cfg  setup.py
src/sound_track/launch/: sound_track.launch.py  sound_track_serial.launch.py
src/sound_track/resource/: sound_track
src/sound_track/sound_track/: __init__.py  angle_publisher.py  controller_node.py  serial_angle_node.py
src/tf_nova/: CMakeLists.txt  package.xml
src/tf_nova/launch/: tf_nova.launch.py
src/tf_nova/src/: tf_nova_node.cpp
src/tts_make_ros2/: CMakeLists.txt  package.xml
src/tts_make_ros2/config/: tts_params.yaml
src/tts_make_ros2/include/: tts_make.h
src/tts_make_ros2/launch/: tts_make.launch.py
src/tts_make_ros2/src/: tts_make.cpp
src/wheeltec_aiui/: CMakeLists.txt  package.xml
src/wheeltec_aiui/AIUI/assets/vtn/: vtn.ini
src/wheeltec_aiui/AIUI/cfg/: aiui.cfg
src/wheeltec_aiui/AIUI/esr_10801/: esr.cfg
src/wheeltec_aiui/AIUI/msc/: msc.cfg
src/wheeltec_aiui/include/: AudioListenThread.h  AudioProvider.h  PCMPlayer.h  Processor.h  clipp.h
src/wheeltec_aiui/include/aiui/: AIUI.h  AIUICommon.h  AIUIConstant.h  AIUIErrorCode.h  AIUIType.h  AIUI_C.h  AIUI_V2.h  PcmPlayer.h  PcmPlayer_C.h
src/wheeltec_aiui/launch/: aiui_start.launch.py
src/wheeltec_aiui/src/: AudioListenThread.cpp  AudioProvider.cpp  PCMPlayer.cpp  Processor.cpp
src/wheeltec_aiui/src/jsoncpp/: json_batchallocator.h  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
src/wheeltec_aiui/src/jsoncpp/json/: config.h  forwards.h  json.h  reader.h  va_features.h  value.h  writer.h
src/wheeltec_aiui/src/utils/: Base64Util.cpp  Base64Util.h  ConvertUtil.cpp  ConvertUtil.h  IatResultUtil.cpp  IatResultUtil.h  StreamNlpTtsHelper.cpp  StreamNlpTtsHelper.h
src/wheeltec_bodyreader/bodyreader/: CMakeLists.txt  package.xml
src/wheeltec_bodyreader/bodyreader/launch/: bodyfollow.launch.py  bodyinteraction.launch.py  final.launch.py
src/wheeltec_bodyreader/bodyreader/msg/: Body.msg  BodyList.msg  Bodyposture.msg  Joint.msg
src/wheeltec_bodyreader/bodyreader/scripts/: compressed.py  display.py
src/wheeltec_bodyreader/bodyreader/src/: bodydata_process.cpp  feedback.cpp  follower.cpp  image_trans.cpp  interaction.cpp  main.cpp
src/wheeltec_bodyreader/bodyreader_msg/: CMakeLists.txt  package.xml
src/wheeltec_bodyreader/bodyreader_msg/msg/: Body.msg  Bodylist.msg  Joint.msg
src/wheeltec_imu/yesense_ros2/yesense_interface/: CMakeLists.txt  package.xml
src/wheeltec_imu/yesense_ros2/yesense_interface/msg/: AttitudeAllData.msg  AttitudeMinAhrs.msg  AttitudeMinVru.msg  EulerOnly.msg  ImuData.msg  ImuDataTenAxis.msg  NavAll.msg  NavMin.msg  NavMinUtc.msg  NavStatus.msg  PosOnly.msg  Pressure.msg  RobotLord.msg  SampleTimestamp.msg  SensorTemp.msg  Tid.msg  Utc.msg  Vel.msg
src/wheeltec_imu/yesense_ros2/yesense_std_ros2/: CMakeLists.txt  package.xml
src/wheeltec_imu/yesense_ros2/yesense_std_ros2/config/: yesense_config.yaml
src/wheeltec_imu/yesense_ros2/yesense_std_ros2/include/: yesense_decoder.h  yesense_decoder_comm.h  yesense_std_out_decoder.h
src/wheeltec_mic/wheeltec_mic_ros2/: CMakeLists.txt  package.xml
src/wheeltec_mic/wheeltec_mic_ros2/audio/: vvui_deno.pcm
src/wheeltec_mic/wheeltec_mic_ros2/config/: call.bnf  param.yaml
src/wheeltec_mic/wheeltec_mic_ros2/include/: command_recognition.h  motion_control.h  node_feedback.h  play_path.h  user_interface.h  voice_control.h  wheeltec_mic.h
src/wheeltec_mic/wheeltec_mic_ros2/launch/: base.launch.py  mic_init.launch.py
src/wheeltec_mic/wheeltec_mic_ros2/src/: command_recognition.cpp  motion_control.cpp  node_feedback.cpp  voice_control.cpp  wheeltec_mic.cpp
src/wheeltec_multi/: CMakeLists.txt  cmd.py  package.xml
src/wheeltec_multi/launch/: navigation.launch.py  wheeltec_slave.launch.py
src/wheeltec_multi/scripts/: killall.sh  leadercar.sh  listen_tfodom.py  send_tfodom.py  set_pose.py  slavecar.sh  wheeltec_keyboard.py
src/wheeltec_multi/src/: multi_avoidance.cpp  slave_tf_listener.cpp
src/wheeltec_path_follow/: CMakeLists.txt  package.xml
src/wheeltec_path_follow/launch/: follow_path.launch.py  save_path.launch.py
src/wheeltec_path_follow/path/: wheeltec_path
src/wheeltec_path_follow/scripts/: follow_path.py
src/wheeltec_path_follow/src/: save_path.cpp
(+599 files in other folders)
