<?xml version="1.0"?>
<package format="3">
  <name>sound_track</name>
  <version>0.0.1</version>
  <description>Simple sound source tracking helper that publishes /awake_angle.</description>
  <maintainer email="maintainer@example.com">wheeltec</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
