<?xml version="1.0"?>
<package format="3">
  <name>tf_nova</name>
  <version>0.0.1</version>
  <description>Benewake TF-NOVA UART driver for ROS 2 Humble (Range publisher)</description>
  <maintainer email="maintainer@example.com">wheeltec</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
